add new activity and layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,5 +20,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".CompanyActivity"/>
+
     </application>
 </manifest>
