--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,7 @@
 
         <activity android:name=".CompanyActivity"/>
 
+        <activity android:name=".SchedulingActivity"/>
+
     </application>
 </manifest>
