--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,23 +50,24 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.android.support:appcompat-v7:26.0.1'
-    implementation 'com.android.support:cardview-v7:26.0.1'
-    implementation 'com.android.support:support-compat:26.0.1'
-    implementation 'com.android.support:animated-vector-drawable:26.0.1'
-    implementation 'com.android.support:design:26.0.1'
-    implementation 'com.android.support:customtabs:26.0.1'
-    implementation 'com.android.support:palette-v7:26.0.1'
-    implementation 'com.android.support:recyclerview-v7:26.0.1'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
+    implementation 'com.android.support:customtabs:26.0.2'
+    implementation 'com.android.support:support-compat:26.0.2'
+    implementation 'com.android.support:animated-vector-drawable:26.0.2'
+    implementation 'com.android.support:cardview-v7:26.0.2'
+    implementation 'com.android.support:design:26.0.2'
+    implementation 'com.android.support:palette-v7:26.0.2'
+    implementation 'com.android.support:recyclerview-v7:26.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-    implementation 'com.google.code.gson:gson:2.8.1'
-    implementation 'com.firebaseui:firebase-ui:2.2.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+//    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+//    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.firebaseui:firebase-ui:2.3.0'
     implementation "com.google.android.gms:play-services-auth:$firebaseVersion"
     implementation "com.google.firebase:firebase-database:$firebaseVersion"
-    implementation "com.google.firebase:firebase-database:$firebaseVersion"
+    implementation "com.google.firebase:firebase-auth:$firebaseVersion"
+    implementation "com.google.firebase:firebase-storage:$firebaseVersion"
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
