--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -20,11 +19,28 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.CompanyActivity"/>
+        <activity android:name=".activity.CompanyActivity" />
 
-        <activity android:name=".activity.SchedulingActivity"/>
+        <activity android:name=".activity.SchedulingActivity" />
 
-        <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.LoginActivity" />
+
+        <receiver
+            android:name=".widget.ScheduleWidgetProvider"
+            android:label="@string/title_widget_today">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="br.alexandrenavarro.scheduling.ACTION_DATA_UPDATED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_next_schedule" />
+        </receiver>
+
+        <service
+            android:name=".widget.ScheduleWidgetRemoteViewsService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
     </application>
 </manifest>
