--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ references:
   decode_android_debug_key: &decode_android_debug_key
     run:
       name: Decode Android debug key store
-      command: echo $ANDROID_KEY_DEBUG_STORE | base64 -di > keys/debug-store.jks
+      command: echo $ANDROID_KEY_DEBUG_STORE | base64 -di > {HOME}/keys/debug.jks
 
   # Google services  
   export_google_services: &export_google_services
