--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
