--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath 'com.google.gms:google-services:3.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,13 +28,12 @@ task clean(type: Delete) {
 }
 
 project.ext {
-    compileSdk = 26
-    targetSdk = 26
+    compileSdk = 29
+    targetSdk = 29
     minSdk = 14
 
-    buildTools = '26.0.1' // Remember to also update in .travis.yml
+    buildTools = '29.0.3'
 
     firebaseVersion = '11.2.2'
     supportLibraryVersion = '26.0.1'
-    buildTools = "26.0.1"
 }
